cmake_minimum_required(VERSION 3.0)
project(chassis_server)

add_definitions(-DBOOST_LOG_DYN_LINK)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(chassis_server server_main.cpp)
target_sources(chassis_server PRIVATE chassis_server.cpp)
target_sources(chassis_server PRIVATE chassis_session.hpp)
target_link_libraries(chassis_server rt)
target_link_libraries(chassis_server pthread)
target_link_libraries(chassis_server boost_log)
target_link_libraries(chassis_server boost_thread)
target_link_libraries(chassis_server boost_system)
target_link_libraries(chassis_server boost_log_setup)
target_link_libraries(chassis_server jsoncpp)
